# Lunir

./: CLAUDE.md  README.md
backend/: .env  alembic.ini  frontend_dev_helper.js  mypy.ini  pyproject.toml
backend/alembic/: env.py
backend/src/backend/: config.py  main.py
backend/src/backend/auth/: __init__.py  dependencies.py  github_oauth.py  jwt_utils.py  router.py  user_service.py
backend/src/backend/chat/: __init__.py  chat_service.py  rest_router.py  websocket_manager.py  websocket_router.py
backend/src/backend/models/: __init__.py  base.py  call.py  chat_room.py  message.py  timeline.py  user.py
backend/tests/: __init__.py  test_main.py
devdocs/: README.md  auth-specification.md  chat-specification.md  database-design.md  progress.md  timeline-specification.md
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/chat/: ChatRoom.tsx  CreateRoomModal.tsx  MessageInput.tsx  MessageItem.css  MessageItem.tsx  MessageList.tsx  RoomList.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: CallbackPage.tsx  ChatPage.css  ChatPage.tsx  LoginPage.css  LoginPage.tsx
frontend/src/services/: api.ts
frontend/src/utils/: devAuth.ts
